# qSteepingTimer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml
docs/: sw_requirements.md
gui/: CMakeLists.txt  main.cpp
